@@ -20,10 +20,28 @@
  */
 package com.microsoft.applicationinsights.internal.profiler;
 
+import java.io.File;
+import java.io.IOException;
+import java.net.MalformedURLException;
+import java.net.URL;
+import java.time.Duration;
+import java.time.Instant;
+import java.util.Date;
+import java.util.UUID;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ScheduledExecutorService;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.Consumer;
+import java.util.function.Supplier;
+
+import com.azure.monitor.opentelemetry.exporter.implementation.models.MonitorDomain;
+import com.azure.monitor.opentelemetry.exporter.implementation.models.TelemetryEventData;
+import com.azure.monitor.opentelemetry.exporter.implementation.models.TelemetryItem;
 import com.microsoft.applicationinsights.TelemetryClient;
 import com.microsoft.applicationinsights.alerting.AlertingSubsystem;
 import com.microsoft.applicationinsights.alerting.alert.AlertBreach;
-import com.microsoft.applicationinsights.extensibility.initializer.TelemetryObservers;
+import com.microsoft.applicationinsights.TelemetryObservers;
 import com.microsoft.applicationinsights.internal.util.ThreadPoolUtils;
 import com.microsoft.applicationinsights.profiler.ProfilerService;
 import com.microsoft.applicationinsights.profiler.ProfilerServiceFactory;
@@ -36,35 +54,18 @@ import com.microsoft.applicationinsights.serviceprofilerapi.client.uploader.Uplo
 import com.microsoft.applicationinsights.serviceprofilerapi.client.uploader.UploadFinishArgs;
 import com.microsoft.applicationinsights.serviceprofilerapi.profiler.JfrProfiler;
 import com.microsoft.applicationinsights.serviceprofilerapi.upload.ServiceProfilerUploader;
-import com.microsoft.applicationinsights.telemetry.EventTelemetry;
-import com.microsoft.applicationinsights.telemetry.MetricTelemetry;
-import com.microsoft.applicationinsights.telemetry.Telemetry;
 import com.microsoft.jfr.Recording;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 import reactor.core.publisher.Mono;
 
-import java.io.File;
-import java.io.IOException;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.nio.charset.UnsupportedCharsetException;
-import java.time.Duration;
-import java.time.Instant;
-import java.util.Date;
-import java.util.UUID;
-import java.util.concurrent.Executors;
-import java.util.concurrent.ScheduledExecutorService;
-import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.concurrent.atomic.AtomicReference;
-import java.util.function.Consumer;
-import java.util.function.Supplier;
+import static com.microsoft.applicationinsights.TelemetryUtil.createMetricsTelemetry;
 
 import static com.microsoft.applicationinsights.internal.perfcounter.Constants.TOTAL_CPU_PC_METRIC_NAME;
 import static com.microsoft.applicationinsights.internal.perfcounter.jvm.JvmHeapMemoryUsedPerformanceCounter.HEAP_MEM_USED_PERCENTAGE;
+import static org.assertj.core.api.Assertions.assertThat;
 
-public class ProfilerServiceTest {
+class ProfilerServiceTest {
 
     final String timeStamp = "a-timestamp";
     final String machineName = "a-machine-name";
@@ -73,32 +74,32 @@ public class ProfilerServiceTest {
     final String jfrExtension = "jfr";
 
     @Test
-    public void endToEndAlertTriggerCpu() throws Exception {
+    void endToEndAlertTriggerCpu() throws Exception {
         endToEndAlertTriggerCycle(
                 false,
-                new MetricTelemetry(TOTAL_CPU_PC_METRIC_NAME, 100.0),
+                createMetricsTelemetry(new TelemetryClient(), TOTAL_CPU_PC_METRIC_NAME, 100.0),
                 telemetry -> {
-                    Assert.assertEquals("JFR-CPU", telemetry.getProperties().get("Source"));
-                    Assert.assertEquals(100.0, telemetry.getMetrics().get("AverageCPUUsage"), 0.01);
-                    Assert.assertEquals(0.0, telemetry.getMetrics().get("AverageMemoryUsage"), 0.01);
+                    assertThat(telemetry.getProperties().get("Source")).isEqualTo("JFR-CPU");
+                    assertThat(telemetry.getMeasurements().get("AverageCPUUsage")).isEqualTo(100.0);
+                    assertThat(telemetry.getMeasurements().get("AverageMemoryUsage")).isEqualTo(0.0);
                 });
     }
 
     @Test
-    public void endToEndAlertTriggerManual() throws Exception {
+    void endToEndAlertTriggerManual() throws Exception {
         endToEndAlertTriggerCycle(
                 true,
-                new MetricTelemetry(HEAP_MEM_USED_PERCENTAGE, 0.0),
+                createMetricsTelemetry(new TelemetryClient(), HEAP_MEM_USED_PERCENTAGE, 0.0),
                 telemetry -> {
-                    Assert.assertEquals("JFR-MANUAL", telemetry.getProperties().get("Source"));
-                    Assert.assertEquals(0.0, telemetry.getMetrics().get("AverageCPUUsage"), 0.01);
-                    Assert.assertEquals(0.0, telemetry.getMetrics().get("AverageMemoryUsage"), 0.01);
+                    assertThat(telemetry.getProperties().get("Source")).isEqualTo("JFR-MANUAL");
+                    assertThat(telemetry.getMeasurements().get("AverageCPUUsage")).isEqualTo(0.0);
+                    assertThat(telemetry.getMeasurements().get("AverageMemoryUsage")).isEqualTo(0.0);
                 });
     }
 
-    public void endToEndAlertTriggerCycle(boolean triggerNow, MetricTelemetry metricTelemetry, Consumer<EventTelemetry> assertTelemetry) throws Exception {
+    void endToEndAlertTriggerCycle(boolean triggerNow, TelemetryItem metricTelemetry, Consumer<TelemetryEventData> assertTelemetry) throws Exception {
         AtomicBoolean profileInvoked = new AtomicBoolean(false);
-        AtomicReference<EventTelemetry> serviceProfilerIndex = new AtomicReference<>();
+        AtomicReference<TelemetryEventData> serviceProfilerIndex = new AtomicReference<>();
 
         String appId = UUID.randomUUID().toString();
 
@@ -114,10 +115,11 @@ public class ProfilerServiceTest {
 
         TelemetryClient client = new TelemetryClient() {
             @Override
-            public void track(Telemetry telemetry) {
-                if (telemetry instanceof EventTelemetry) {
-                    if ("ServiceProfilerIndex".equals(((EventTelemetry) telemetry).getName())) {
-                        serviceProfilerIndex.set((EventTelemetry) telemetry);
+            public void trackAsync(TelemetryItem telemetry) {
+                MonitorDomain data = telemetry.getData().getBaseData();
+                if (data instanceof TelemetryEventData) {
+                    if ("ServiceProfilerIndex".equals(((TelemetryEventData) data).getName())) {
+                        serviceProfilerIndex.set((TelemetryEventData) data);
                     }
                     synchronized (monitor) {
                         monitor.notifyAll();
@@ -148,7 +150,7 @@ public class ProfilerServiceTest {
                         1,
                         2,
                         3,
-                        new URI("http://localhost"),
+                        new URL("http://localhost"),
                         true,
                         null,
                         null
@@ -168,7 +170,7 @@ public class ProfilerServiceTest {
             TelemetryObservers
                     .INSTANCE
                     .getObservers()
-                    .forEach(telemetryObserver -> telemetryObserver.consume(metricTelemetry));
+                    .forEach(telemetryObserver -> telemetryObserver.accept(metricTelemetry));
 
             synchronized (monitor) {
                 if (serviceProfilerIndex.get() != null) {
@@ -178,20 +180,20 @@ public class ProfilerServiceTest {
             }
         }
 
-        Assert.assertTrue(profileInvoked.get());
+        assertThat(profileInvoked.get()).isTrue();
 
-        Assert.assertNotNull(serviceProfilerIndex.get());
-        Assert.assertEquals("Profile", serviceProfilerIndex.get().getProperties().get("ArtifactKind"));
-        Assert.assertEquals(timeStamp, serviceProfilerIndex.get().getProperties().get("EtlFileSessionId"));
-        Assert.assertEquals(appId, serviceProfilerIndex.get().getProperties().get("DataCube"));
-        Assert.assertEquals(jfrExtension, serviceProfilerIndex.get().getProperties().get("Extension"));
-        Assert.assertEquals(machineName, serviceProfilerIndex.get().getProperties().get("MachineName"));
-        Assert.assertEquals(processId, serviceProfilerIndex.get().getProperties().get("ProcessId"));
-        Assert.assertEquals(stampId, serviceProfilerIndex.get().getProperties().get("StampId"));
+        assertThat(serviceProfilerIndex.get()).isNotNull();
+        assertThat(serviceProfilerIndex.get().getProperties().get("ArtifactKind")).isEqualTo("Profile");
+        assertThat(serviceProfilerIndex.get().getProperties().get("EtlFileSessionId")).isEqualTo(timeStamp);
+        assertThat(serviceProfilerIndex.get().getProperties().get("DataCube")).isEqualTo(appId);
+        assertThat(serviceProfilerIndex.get().getProperties().get("Extension")).isEqualTo(jfrExtension);
+        assertThat(serviceProfilerIndex.get().getProperties().get("MachineName")).isEqualTo(machineName);
+        assertThat(serviceProfilerIndex.get().getProperties().get("ProcessId")).isEqualTo(processId);
+        assertThat(serviceProfilerIndex.get().getProperties().get("StampId")).isEqualTo(stampId);
         assertTelemetry.accept(serviceProfilerIndex.get());
     }
 
-    private ProfilerService awaitReferenceSet(AtomicReference<ProfilerService> service) {
+    private static ProfilerService awaitReferenceSet(AtomicReference<ProfilerService> service) {
         //Wait for up to 10 seconds
         for (int i = 0; i < 100 && service.get() == null; i++) {
             try {
@@ -203,12 +205,12 @@ public class ProfilerServiceTest {
         return service.get();
     }
 
-    private JfrProfiler getJfrDaemon(AtomicBoolean profileInvoked) throws URISyntaxException {
+    private JfrProfiler getJfrDaemon(AtomicBoolean profileInvoked) throws MalformedURLException {
         return new JfrProfiler(new ServiceProfilerServiceConfig(
                 1,
                 2,
                 3,
-                new URI("http://localhost"),
+                new URL("http://localhost"),
                 false,
                 null,
                 null)) {
@@ -241,7 +243,7 @@ public class ProfilerServiceTest {
         };
     }
 
-    private ServiceProfilerClientV2 stubClient(boolean triggerNow) {
+    private static ServiceProfilerClientV2 stubClient(boolean triggerNow) {
         return new ServiceProfilerClientV2() {
             @Override
             public BlobAccessPass getUploadAccess(UUID profileId) {
@@ -249,7 +251,7 @@ public class ProfilerServiceTest {
             }
 
             @Override
-            public ArtifactAcceptedResponse reportUploadFinish(UUID profileId, String etag) throws UnsupportedCharsetException {
+            public ArtifactAcceptedResponse reportUploadFinish(UUID profileId, String etag) {
                 return null;
             }
 
